# explainable-chronos

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_evaluation.ipynb  run_extensions.py  test_attn_shapes.py  test_pipeline_cov.py
experiments/: temporal_attention_probe.ipynb
extension_1/: README.md  __init__.py  attention_attributor.py  config.py  consistency_scorer.py  covariate_attribution.py  evaluation.py  evaluation_real.py  feature_extractor.py  pipeline.py  verbalizer.py
extension_1/attribution/: attention.py  base.py  shap.py  types.py
extension_1/eval_results/: evaluation_real_results.csv  evaluation_report.md  evaluation_report_real.md  evaluation_results.csv  results_covariates.csv  results_real_ETTh1.csv  results_real_ETTm1.csv  results_real_SP500.csv  results_real_Weather.csv  results_univariate.csv
extension_1/evaluation/: factuality.py  judge.py  qa_scorer.py  runner.py  scoring.py  trace.py
extension_1/features/: extractor.py
extension_1/verbalization/: fusion.py  llm.py  template.py  trajectory.py  types.py
extension_2/: __init__.py  case_study.py  datasets.py  dialogue.py  evaluation.py  faithfulness.py  input_modifier.py  intent_parser.py  intent_patterns.py  modification.py  rule_parser.py  sensitivity.py  slot_extraction.py
notebooks/: demo_ext1_ext2.ipynb  ex_1_demo.ipynb  ex_1_run_evaluation.ipynb  ex_2_run_evaluation.ipynb
presentation/: slides.html  slides.md
report/: TODO.md  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
shared/: __init__.py  data_generators.py  forecast_provider.py
(+34 files in other folders)
